# a2a-mermaid-tracer

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: mermaid-syntax.md  python-quality.md  testing.md
examples/: sample_traces.json  sample_traces.ndjson
src/a2a_mermaid_tracer/: __init__.py  cli.py  parser.py  renderer.py
tests/: test_cli.py  test_parser.py  test_renderer.py
